# vigilantV2

./: .gitignore  .gitmodules  README.md  get_models.sh  requirements.txt
android/build-vigilant/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  android-vigilant-deployment-settings.json  build.ninja  cmake_install.cmake  rules.ninja
android/build-vigilant/.cmake/api/v1/reply/: index-2021-05-16T15-16-25-0724.json  target-apk-Debug-b97c3464a28d8c520297.json  target-vigilant-Debug-f1a2f120a6998a5a7a56.json
android/build-vigilant/.cmake/api/v1/reply.prev/: cache-v2-c4b3384c1165cce7e33b.json  cmakeFiles-v1-a6167e91121183466d7f.json  codemodel-v2-3c2bbaa483668031a52e.json  target-vigilant_autogen-Debug-1f8d90569cdcb881d42e.json  target-vigilant_make_apk-Debug-03b3fad084669ba57270.json  target-vigilant_prepare_apk_dir-Debug-a6eb2c8c7e168e57b571.json
android/build-vigilant/android-build/: AndroidManifest.xml
android/build-vigilant/android-build/assets/: android_rcc_bundle.rcc
android/build-vigilant/android-build/res/values/: libs.xml
android/build-vigilant/vigilant_autogen/: moc_predefs.h
android/build-vigilant/vigilant_autogen/EWIEGA46WW/: qrc_qml.cpp
android/vigilant/: CMakeLists.txt  Page1Form.ui.qml  main.qml
app/Vigilant/: CMakeLists.txt  deploy.sh  mainwindow.cpp  mainwindow.ui
app/android/: settings.gradle
app/android/app/src/main/res/values/: themes.xml
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/vgmobile/: MainActivity.kt
app/app/src/main/res/values/: strings.xml
app/app/src/main/res/values-night/: themes.xml
app/app/src/test/java/com/example/vgmobile/: ExampleUnitTest.kt
app/build-Vigilant/: .ninja_deps  .ninja_log  CMakeCache.txt  android-Vigilant-deployment-settings.json  app_process  build.ninja  cmake_install.cmake  rules.ninja
app/build-Vigilant/.cmake/api/v1/reply/: cache-v2-4de37ef100f7a7979a9c.json  cmakeFiles-v1-8d0626ff04071460eb54.json  codemodel-v2-f7e43a97c8e7fca916d4.json  index-2021-05-30T16-23-05-0072.json  target-Vigilant-Debug-880193f7317cebd222e3.json  target-Vigilant_autogen-Debug-7f6d21e9d2a2b8fb12b7.json  target-Vigilant_make_apk-Debug-6765875a1ccc59bebaeb.json  target-Vigilant_prepare_apk_dir-Debug-6ca620e18e7f6321fee4.json  target-apk-Debug-7dcd96a547ebc0af3511.json
app/build-Vigilant/Vigilant_autogen/: moc_predefs.h
app/build-Vigilant/Vigilant_autogen/include/: ui_mainwindow.h
app/build-Vigilant/android-build/: AndroidManifest.xml
app/build-Vigilant/android-build/res/values/: libs.xml
app/build-vigilant/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  vigilant
app/build-vigilant-apk/: .ninja_deps  .ninja_log  CMakeCache.txt  android-vigilant-deployment-settings.json  build.ninja  cmake_install.cmake  linker  rules.ninja
app/build-vigilant-apk/.cmake/api/v1/reply/: cache-v2-e7f62290e81cedeec662.json  cmakeFiles-v1-99b73339c24d27e4c4ad.json  codemodel-v2-9e76ccd5a7b7c698a531.json  index-2021-05-15T22-55-14-0140.json  target-apk-Debug-e106aa39ecad5592f77f.json  target-vigilant-Debug-f1e03fad341c22ff42ce.json  target-vigilant_autogen-Debug-a8033c6ee5c7c13393aa.json  target-vigilant_make_apk-Debug-ee3463f38e2d786271e9.json  target-vigilant_prepare_apk_dir-Debug-a9ef28f2f0201532fa7e.json
app/build-vigilant-apk/android-build/: AndroidManifest.xml  gradle.properties  local.properties
app/build-vigilant-apk/vigilant_autogen/: moc_predefs.h
app/build-vigilant-apk/vigilant_autogen/EWIEGA46WW/: moc_mainwindow.cpp
app/build-vigilant-apk/vigilant_autogen/include/: ui_maindisplay.h
app/build-vigilant/.cmake/api/v1/reply/: cache-v2-a874562963c6f66fee5d.json  cmakeFiles-v1-784ab0bdef0941125bb7.json  codemodel-v2-40037987c0b64fa002cc.json  index-2021-05-15T22-48-58-0432.json  target-vigilant-Debug-6587b86aad80e1ebd48a.json  target-vigilant_autogen-Debug-38bc074cbece86986200.json
app/desktop/: CMakeLists.txt
app/desktop/include/: mainwindow.h
app/desktop/src/: maindisplay.ui  mainwindow.cpp
app/gradle/wrapper/: gradle-wrapper.properties
app/vigilant/: .gitignore  CMakeLists.txt  Page1Form.ui.qml  Page2Form.ui.qml  main.qml  maindisplay.ui  mainwindow.cpp  qml.qrc
app/vigilant/include/: camera.h
app/vigilant/src/: camera.cpp  main.cpp
common/: main.py  train.py
common/helpers/: models_info.py  quantize.py  train.py  transfer_model.py  tscript.py  video.py  visuals.py
common/lanes/: dataset.py  model.py
common/ptcloud/: extract.py  generate_cloud.py  sync.ply  visuals.py
common/visualize/: video.py
drive/: main.py  paths.json
drive/lanes/: dataset.py  model.py
gui/interface/: maingui.ui  splashscreen.ui
models/: get_models.sh
slam/: README.md
(+1 files in other folders)
